A few HTACCESS rewrites and z-index fix

--- a/assets/engine/css/style-additional.css
+++ b/assets/engine/css/style-additional.css
@@ -1804,6 +1804,7 @@ a {
   position: absolute;
   top: 0;
   width: 100%;
+  z-index: 3;
 }
 
 
